--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="es">
+  <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>ArtistManager</title>
-</head>
-<body>
-<div id="root"></div>
-<script src="./src/main.tsx" type="module"></script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="./src/main.tsx" type="module"></script>
+    <script src="./src/utils/onCloseWindow.ts" type="module"></script>
+  </body>
 </html>
 
